hot fix, overflow in Firefox

--- a/css/glider.css
+++ b/css/glider.css
@@ -7,7 +7,7 @@
 .glider {
   margin: 0 auto;
   position: relative;
-  overflow-y: hidden;
+  overflow: hidden;
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: none;
   transform: translateZ(0);
